# wasm-shifu-demo

./: .gitignore  README.md
mockDevice/: dockerfile  mockDevice.go
shifu/: Makefile  go.mod  go.sum
shifu/deviceshifu/: Dockerfile.deviceshifu
shifu/deviceshifu/pkg/deviceshifu/: deviceshifu.go
shifuConfig/Shifu1/: shifu1.yaml
shifuConfig/task3/: task3.yaml
wasmEdge/: deviceshifu.dockerfile  dockerfile  go.mod  go.sum  js.dockerfile  main.go
wasmEdge/js-func/: Cargo.toml  Dockerfile  build.sh
wasmEdge/js-func/src/: lib.rs
wasmEdge/js-func/src/js/: js_func.wasm  run.js
wasmEdge/k8s/: deployment.yaml  service.yaml
