[package]
name = "js-func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "js_func"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasmedge_quickjs = "0.2.0"
wasmedge-bindgen = "0.4.0"
wasmedge-bindgen-macro = "0.4.0"
